# llm-uncertainty-head

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.ipynb  train.py
benchmark_multilingual/en/: prompts.py
benchmark_multilingual/zh/: prompts.py
configs/: polygraph_eval.yaml  run_extract_verify_claims.yaml  run_generate_texts.yaml  run_train_mixtral_router.yaml  run_train_uhead.yaml  run_train_vl_uhead.yaml
configs/model/: default.py
examples/: basic_usage.ipynb  basic_usage_claim.ipynb  generate_with_uncertainty_claim_level.ipynb  generate_with_uncertainty_claim_level_saplma.ipynb  generate_with_uncertainty_token_level.ipynb  probing.py  train_linear_uhead_from_token_cache.py
generate_dataset/: run_generate_texts.py
luh/: __init__.py  auto_uncertainty_head.py  builder_CalculatorApplyUQHead.py  builder_CalculatorCachedPredictions.py  builder_CalculatorInferLuh.py  builder_LuhClaimEstimator.py  builder_LuhClaimEstimatorDummy.py  calculator_apply_uq_head.py  calculator_cached_predictions.py  calculator_infer_luh.py  causal_lm_with_uncertainty.py  disk_cache.py  luh_claim_estimator.py  luh_claim_estimator_dummy.py  luh_estimator_dummy.py  utils.py
luh/feature_extractors/: __init__.py  basic_attention.py  basic_hidden_states.py  combined.py  feature_extractor_base.py  final_output_ranks.py  lookback_lens.py  mixtral_router.py  token_probabilities.py  token_probabilities_from_layers.py  token_similarities_adjacent_layers.py  utils.py
luh/heads/: linear_head.py  (+8 more)
scripts/: upload_model_to_hf.py
train_luh/: causal_lm_with_uncertainty_layer_claim.py
(+10 files in other folders)
